crates/cadenza-syntax/src/generated/snapshots/cadenza_syntax__generated__test_data__invalid_parse__error_unexpected_comma__invalid_parse_error_unexpected_comma_cst.snap
---
source: crates/cadenza-syntax/src/generated/test_data.rs
expression: ",\n"
---
Root@0..2
  Error@0..1
    Comma@0..1 ","
  Newline@1..2 "\n"
